# python-logging

./: Makefile  README.md  pyproject.toml
docs/: README.md
tests/: .coveragerc  __setup__.py  test___init__.py
