[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "topshelfsoftware_logging"
version = "1.0.0"
description = "Supports logging functionality including log creation, formatting, and managing handlers"
license="MIT"
authors = [
    "Tanner Pubins"
]
readme = "./docs/README.md"
repository = "https://github.com/topshelfsoftware/python-logging"

[tool.poetry.dependencies]
python = "^3.9"
coloredlogs = "^15"  # MIT license

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = []
extend-select = ["C901", "E501"]
mccabe.max-complexity = 10
